--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Not shown in website, header meta information -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My Web Page</title>
     </head>
     <body>
+        <!-- Introduction-->
         <h1>Welcome to My Web Page</h1>
         <h1>Hi!</h1>
+        <!-- About Me-->
         <p>My name is Jun Han, and I am studying Web Design at UMT.</p>
         <p>This is my first web page created from scratch using HTML. My hobbies include <strong>reading, coding, 
             and playing video games.</strong>.
         </p>
 
+        <!-- Section showing Favourite Books of Jun Han-->>
         <ol>
             <li>Rachel Cusk - Parade</li>
             <li>Ray Bradbury - Fahrenheit 451</li>
             <li>James Clear - Atomic Habits</li>
         </ol>
 
+        <!-- My Hobbies-->>
         <ul>
             <li>Reading</li>
             <li>Coding</li>
